--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ node_modules
 package-lock.json
 # ignore the development environment variables (if any)
 .env
+# ignore all the JSON data files within data directories
+**/data/*.json
 # ignore all dist directories files (and subdirectories) from .gitignore
 dist/*
 # but (re)include specific dist directory files, e.g.
